2008-10-27  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el: Removed items in the ChangeLog section.  A
	ChangeLog file is now included with the source package.  Convert
	tabs to spaces.  Add form feed characters between sections.
	Fix indentation levels.
	(php-default-face, font-lock-keyword-face)
	(font-lock-constant-face): Remove conditional bindings and XEmacs
	code that likely does nothing.
	
2008-10-23  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-imenu-generic-expression): Reverse order of
	expression, since Imenu displays it in reverse.
	(php-completion-table): Move next to php-complete-function.

2008-10-23  David House <dmhouse-@-gmail.com>

	* php-mode.el (php-font-lock-keywords-1)
	(php-font-lock-keywords-2): Fix regular expression for
	highlighting various keywords when they're at the beginning or end
	of the line.

2008-10-22  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-imenu-generic-expression)
	(php-beginning-of-defun-regexp): Fix regular expression that is
	failing to match identifiers in function definitions for Imenu and
	add-change-log commands.
	(php-keywords): Remove "private" since its handled like
	"protected" and "public", not as a generic keyword.
	(php-font-lock-keywords-1): The use of grouping in the regular
	expression for php-constants and php-keywords added on 2008-04-12
	requires referencing the group number to highlight, otherwrise the
	entire match is highlighted.

	* php-mode.texi: Fix typos and fill long paragraphs.  Add
	maintainer comment near top of file.  Correct maintainer email
	address with working address.
	(Introduction): Add index entry for M-x php-mode-version.
	(Installation): New section.
	(Editing): Change concept index entry of fill-column to a variable
	index entry.
	(Completion): Add index entry for M-x visit-tags-table, and M-x
	customize-variable.
	(Index Menu): Finish maintainer comments on Imenu.  "Functions"